--- a/blackpill-sdcard/.cargo/config.toml
+++ b/blackpill-sdcard/.cargo/config.toml
@@ -20,6 +20,8 @@ rustflags = [
   # "-C", "linker=arm-none-eabi-gcc",
   # "-C", "link-arg=-Wl,-Tlink.x",
   # "-C", "link-arg=-nostartfiles",
+
+  # "-C", "link-arg=-Tdefmt.x",
 ]
 
 [build]
