--- a/blackpill-sdcard/.cargo/config.toml
+++ b/blackpill-sdcard/.cargo/config.toml
@@ -2,6 +2,7 @@
 # uncomment this to make `cargo run` execute programs on QEMU
 # runner = "qemu-system-arm -cpu cortex-m3 -machine lm3s6965evb -nographic -semihosting-config enable=on,target=native -kernel"
 
+# runner = "probe-rs run --chip STM32F401CCUx"
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
 runner = "gdb-multiarch -q -x openocd.gdb"
 
